Updated docs & linted files
