# routes/auth.ts
@@ -1,26 +1,26 @@
-import { NextFunction, Router } from 'express'
-import { Request, Response } from "express";
+import { Router } from 'express';
+
 const passport = require('passport');
-const passportStategies = require('../config/passport')
-const auth = require('../controllers/auth')
+const passportStategies = require('../config/passport');
+const auth = require('../controllers/auth');
 
-const routes: Router = require('express').Router()
+const routes: Router = require('express').Router();
 
-routes.get('/auth/login', auth.login)
+routes.get('/auth/login', auth.login);
 
-routes.get('/auth/logout', auth.logout)
+routes.get('/auth/logout', auth.logout);
 
 routes.get('/auth/google', passport.authenticate('google', {
-  scope: ['profile'],
+  scope: ['profile']
 })
-  // #swagger.summary = "This endpoint handles OAuth authentication with Google."  
-)
+  // #swagger.summary = "This endpoint handles OAuth authentication with Google."
+);
 
 routes.get('/auth/google/redirect', passport.authenticate('google', {
   successRedirect: '/posts',
-  failureRedirect: '/auth/login',
+  failureRedirect: '/auth/login'
 })
   // #swagger.summary = "This endpoint handles the redirection following OAuth authentication with Google."
-)
+);
 
 module.exports = routes;
